--- a/arch/arm64/kvm/Makefile
+++ b/arch/arm64/kvm/Makefile
@@ -4,6 +4,11 @@
 
 ccflags-y += -Iarch/arm64/kvm
 CFLAGS_arm.o := -I.
+
+ifeq ($(CONFIG_HYPLET), y)
+CFLAGS_arm.o +=  -D__HYPLET__
+endif
+
 CFLAGS_mmu.o := -I.
 
 KVM=../../../virt/kvm
@@ -27,3 +32,5 @@ kvm-$(CONFIG_KVM_ARM_HOST) += $(KVM)/arm/vgic-v3.o
 kvm-$(CONFIG_KVM_ARM_HOST) += $(KVM)/arm/vgic-v3-emul.o
 kvm-$(CONFIG_KVM_ARM_HOST) += vgic-v3-switch.o
 kvm-$(CONFIG_KVM_ARM_HOST) += $(KVM)/arm/arch_timer.o
+
+obj-$(CONFIG_HYPLET)	+= hyplet/
