trap interrupts from all domains
remove hwirq . PI3 has two interrupt domains and it complicate things a bit
Don't stamp time in EL1. Only in EL2

--- a/kernel/irq/Makefile
+++ b/kernel/irq/Makefile
@@ -1,4 +1,9 @@
 
+
+ifeq ($(CONFIG_HYPLET), y)
+CFLAGS_irqdesc.o  +=  -D__HYPLET__
+endif
+
 obj-y := irqdesc.o handle.o manage.o spurious.o resend.o chip.o dummychip.o devres.o
 obj-$(CONFIG_GENERIC_IRQ_CHIP) += generic-chip.o
 obj-$(CONFIG_GENERIC_IRQ_PROBE) += autoprobe.o
