--- a/arch/arm64/hyplet/Makefile
+++ b/arch/arm64/hyplet/Makefile
@@ -1,4 +1,4 @@
-ccflags-y +=   -D__HYPLET__ -Iarch/arm/include/ -D__LINUX_ARM_ARCH__=8
+ccflags-y +=   -D__HYPLET__  -D__HYPLET_VM__ -Iarch/arm/include/ -D__LINUX_ARM_ARCH__=8
 obj-$(CONFIG_HYPLET) += \
 	hyplet_mmu.o \
 	hypletS.o \
