--- a/arch/arm64/hyplet/Kconfig
+++ b/arch/arm64/hyplet/Kconfig
@@ -1,7 +1,9 @@
 #
-#   Hyplet
+# Hyplet Protect 
 #
 config HYPLET
-	bool "hyplets"
+	bool "hyplet"
 	---help---
-	hyplet support
+	Hyplets provides access to user space code by mapping user space pages
+	to EL2.
+	Hyplets are used in many forms.TEE, RealTime,  offline hyplets ,RPC and so on.
